--- a/.github/workflows/Analysis.yml
+++ b/.github/workflows/Analysis.yml
@@ -17,7 +17,7 @@ jobs:
         steps:
         - uses: actions/checkout@v4
           with:
-            ref: master
+            ref: main
             repository: KrishnaJallipalliQ/dummy-C-/apex-recipes-main/force-app/main/default/classes
             token: ${{ secrets.SERVICE_ACCOUNT_MERGE_TOKEN }}
             fetch-depth: 0
