--- a/action.yml
+++ b/action.yml
@@ -10,5 +10,5 @@ runs:
   steps:
     - uses: legetz/setup-pmd@7.0.0-rc3
       env:
-        PMD_TOKEN: ${{ inputs.code-analysis-directory }}
+        PMD_TOKEN: ${{ secrets.DIR_MAIN_PATH }}
       
