--- a/action.yml
+++ b/action.yml
@@ -28,13 +28,13 @@ runs:
       uses: legetz/setup-pmd@7.0.0-rc4
     - name: APEX full scan
       shell: bash
-      run: pmd check --dir ${{ inputs.code-analysis-directory }} --rulesets ${{ inputs.rulesets-path }} --uploadSarifReport false -f html -r /home/runner/work/Apex-PMD/pmd-report.html || true
+      run: pmd check --dir ${{ inputs.code-analysis-directory }} --rulesets ${{ inputs.rulesets-path }} --uploadSarifReport false -f html -r ${{ inputs.results-format }} || true
 
     - name: Upload PMD Report
       uses: actions/upload-artifact@v2
       with:
         name: pmd-report
-        path: /home/runner/work/Apex-PMD/pmd-report.html    
+        path: ${{ inputs.results-format }}
 
 
         
